package ohhai;

message OhHai {
	enum MessageType {
		HEARTBEAT_REQUEST = 0;
		HEARTBEAT_RESPONSE = 1;
		READ_REQUEST = 2;
		WRITE_REQUEST = 3;
	}
	required MessageType message_type = 5;

	message ReadRequest {
		required int64 id = 1;
		required int64 range_top = 2;
		required int64 range_bottom = 3;
	}
	optional ReadRequest read_request = 1;

	message WriteRequest {
		required int64 id = 1;
	}
	optional WriteRequest write_request = 2;

	message HeartBeatRequest {

	}
	optional HeartBeatRequest heart_beat_request = 3;

	message HeartBeatResponse {
		repeated int64 id = 1;
	}
	optional HeartBeatResponse heart_beat_response = 4;

}